--- a/EnemizerGui/EnemizerForm.resx
+++ b/EnemizerGui/EnemizerForm.resx
@@ -150,4 +150,12 @@ e.g you could have 2 kholdstare, 2 trinexx, 2 vitreous
 Chaos - this allow duplicated bosses
 e.g you could have 5 trinexx, 3 mothula, 2 armos, etc...</value>
   </data>
+  <data name="muteMusicCheckBox.ToolTip" xml:space="preserve">
+    <value>Mute the game music. Note that MSU1 is always enabled, 
+however if you do not enable this option you will hear both 
+in game music and MSU1 music if you have setup MSU1 files 
+for your emulator.
+Also note that this will not reverse muted music in the base 
+randomizer rom if that option was enabled.</value>
+  </data>
 </root>
